@startuml

title __IMPL's Class Diagram__\n

  namespace  {
    namespace om.web.guitarapp {
      namespace service {
        namespace impl {
          class com.web.guitarapp.service.impl.TrackerServiceImpl {
              + TrackerServiceImpl()
              + findByUserIdAndStatus()
              + save()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.web.guitarapp {
      namespace service {
        namespace impl {
          class com.web.guitarapp.service.impl.UserDetailsServiceImpl {
              {static} - log : Logger
              + loadUserByUsername()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.web.guitarapp {
      namespace service {
        namespace impl {
          class com.web.guitarapp.service.impl.UserServiceImpl {
              {static} - log : Logger
              - passwordEncoder : BCryptPasswordEncoder
              + UserServiceImpl()
              + save()
          }
        }
      }
    }
  }
  

  com.web.guitarapp.service.impl.TrackerServiceImpl .up.|> com.web.guitarapp.service.TrackerService
  com.web.guitarapp.service.impl.TrackerServiceImpl o-- com.web.guitarapp.dao.TrackerRepository : trackerRepository
  com.web.guitarapp.service.impl.TrackerServiceImpl o-- com.web.guitarapp.dao.UserRepository : userRepository
  com.web.guitarapp.service.impl.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.web.guitarapp.service.impl.UserDetailsServiceImpl o-- com.web.guitarapp.dao.UserRepository : userRepository
  com.web.guitarapp.service.impl.UserServiceImpl .up.|> com.web.guitarapp.service.UserService
  com.web.guitarapp.service.impl.UserServiceImpl o-- com.web.guitarapp.dao.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
